{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 110,
  "lineage": "75a293c1-3cd9-2882-c061-9023b165c266",
  "resources": [
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:298717586028:loadbalancer/app/content-marketing-swarm-dev-alb/3825b6d72f7fa983",
            "arn_suffix": "app/content-marketing-swarm-dev-alb/3825b6d72f7fa983",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "content-marketing-swarm-dev-alb-41944691.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:298717586028:loadbalancer/app/content-marketing-swarm-dev-alb/3825b6d72f7fa983",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "content-marketing-swarm-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-053be6f4cf40e9cff"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07eaa19eed019c24e"
              },
              {
                "subnet_id": "subnet-0eeb71b4a9ba69d84"
              }
            ],
            "subnets": [
              "subnet-07eaa19eed019c24e",
              "subnet-0eeb71b4a9ba69d84"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "content-marketing-swarm-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "content-marketing-swarm-alb"
            },
            "vpc_id": "vpc-0c6cc3ed6217e0d53",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:298717586028:listener/app/content-marketing-swarm-dev-alb/3825b6d72f7fa983/5622f0703adc4dbf",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:298717586028:listener/app/content-marketing-swarm-dev-alb/3825b6d72f7fa983/5622f0703adc4dbf",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:298717586028:loadbalancer/app/content-marketing-swarm-dev-alb/3825b6d72f7fa983",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs.aws_lb.main",
            "module.ecs.aws_lb_target_group.main",
            "module.ecs.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:298717586028:listener/app/content-marketing-swarm-dev-alb/3825b6d72f7fa983/d0e7fc1772976c16",
            "certificate_arn": "arn:aws:acm:us-east-1:298717586028:certificate/ec8df536-bd80-4420-9e54-023a074e6777",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:298717586028:targetgroup/content-marketing-swarm-dev-tg/ca264c3b19af45c1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:298717586028:listener/app/content-marketing-swarm-dev-alb/3825b6d72f7fa983/d0e7fc1772976c16",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:298717586028:loadbalancer/app/content-marketing-swarm-dev-alb/3825b6d72f7fa983",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs.aws_acm_certificate.alb_cert",
            "module.ecs.aws_acm_certificate_validation.alb_cert",
            "module.ecs.aws_lb.main",
            "module.ecs.aws_lb_target_group.main",
            "module.ecs.aws_route53_record.cert_validation",
            "module.ecs.aws_route53_zone.main",
            "module.ecs.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:298717586028:targetgroup/content-marketing-swarm-dev-tg/ca264c3b19af45c1",
            "arn_suffix": "targetgroup/content-marketing-swarm-dev-tg/ca264c3b19af45c1",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:298717586028:targetgroup/content-marketing-swarm-dev-tg/ca264c3b19af45c1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:298717586028:loadbalancer/app/content-marketing-swarm-dev-alb/3825b6d72f7fa983"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "content-marketing-swarm-dev-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "content-marketing-swarm-tg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "content-marketing-swarm-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c6cc3ed6217e0d53"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:298717586028:security-group/sg-053be6f4cf40e9cff",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-053be6f4cf40e9cff",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "content-marketing-swarm-dev-alb-sg",
            "name_prefix": "",
            "owner_id": "298717586028",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "content-marketing-swarm-alb-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "content-marketing-swarm-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6cc3ed6217e0d53"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:298717586028:security-group/sg-0be456014ea53985b",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0be456014ea53985b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-053be6f4cf40e9cff"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "content-marketing-swarm-dev-ecs-tasks-sg",
            "name_prefix": "",
            "owner_id": "298717586028",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "content-marketing-swarm-ecs-tasks-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "content-marketing-swarm-ecs-tasks-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6cc3ed6217e0d53"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs.aws_security_group.alb",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-065f5094bd25f2f9c",
            "arn": "arn:aws:ec2:us-east-1:298717586028:elastic-ip/eipalloc-065f5094bd25f2f9c",
            "association_id": "eipassoc-026e9da25cda2f27d",
            "domain": "vpc",
            "id": "eipalloc-065f5094bd25f2f9c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0138d8fdd6de75045",
            "private_dns": "ip-10-0-0-194.ec2.internal",
            "private_ip": "10.0.0.194",
            "public_dns": "ec2-98-94-242-225.compute-1.amazonaws.com",
            "public_ip": "98.94.242.225",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "content-marketing-swarm-nat-eip-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "content-marketing-swarm-nat-eip-1"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0afb7db405bddad3a",
            "arn": "arn:aws:ec2:us-east-1:298717586028:elastic-ip/eipalloc-0afb7db405bddad3a",
            "association_id": "eipassoc-03b0434bd76d89653",
            "domain": "vpc",
            "id": "eipalloc-0afb7db405bddad3a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a047fd39306f7fa0",
            "private_dns": "ip-10-0-1-55.ec2.internal",
            "private_ip": "10.0.1.55",
            "public_dns": "ec2-23-20-35-59.compute-1.amazonaws.com",
            "public_ip": "23.20.35.59",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "content-marketing-swarm-nat-eip-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "content-marketing-swarm-nat-eip-2"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:298717586028:internet-gateway/igw-0f6e328b2db578ec6",
            "id": "igw-0f6e328b2db578ec6",
            "owner_id": "298717586028",
            "tags": {
              "Environment": "dev",
              "Name": "content-marketing-swarm-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "content-marketing-swarm-igw"
            },
            "vpc_id": "vpc-0c6cc3ed6217e0d53"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-065f5094bd25f2f9c",
            "association_id": "eipassoc-026e9da25cda2f27d",
            "connectivity_type": "public",
            "id": "nat-078345cafbe5f8299",
            "network_interface_id": "eni-0138d8fdd6de75045",
            "private_ip": "10.0.0.194",
            "public_ip": "98.94.242.225",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0eeb71b4a9ba69d84",
            "tags": {
              "Environment": "dev",
              "Name": "content-marketing-swarm-nat-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "content-marketing-swarm-nat-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0afb7db405bddad3a",
            "association_id": "eipassoc-03b0434bd76d89653",
            "connectivity_type": "public",
            "id": "nat-085beeffbe672ff88",
            "network_interface_id": "eni-0a047fd39306f7fa0",
            "private_ip": "10.0.1.55",
            "public_ip": "23.20.35.59",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07eaa19eed019c24e",
            "tags": {
              "Environment": "dev",
              "Name": "content-marketing-swarm-nat-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "content-marketing-swarm-nat-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:298717586028:route-table/rtb-01bf51cb501d0d02f",
            "id": "rtb-01bf51cb501d0d02f",
            "owner_id": "298717586028",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-078345cafbe5f8299",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "content-marketing-swarm-private-rt-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "content-marketing-swarm-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6cc3ed6217e0d53"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:298717586028:route-table/rtb-078e832842468eca7",
            "id": "rtb-078e832842468eca7",
            "owner_id": "298717586028",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-085beeffbe672ff88",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "content-marketing-swarm-private-rt-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "content-marketing-swarm-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6cc3ed6217e0d53"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:298717586028:route-table/rtb-04a2cee479f223b7b",
            "id": "rtb-04a2cee479f223b7b",
            "owner_id": "298717586028",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f6e328b2db578ec6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "content-marketing-swarm-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "content-marketing-swarm-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6cc3ed6217e0d53"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0097b5fbed6233f25",
            "route_table_id": "rtb-01bf51cb501d0d02f",
            "subnet_id": "subnet-01f875ca071fa3a4d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ce78bf9c5cf9ddf",
            "route_table_id": "rtb-078e832842468eca7",
            "subnet_id": "subnet-0ea697e305a20d89c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042429721b9f5e50c",
            "route_table_id": "rtb-04a2cee479f223b7b",
            "subnet_id": "subnet-0eeb71b4a9ba69d84"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b73166bc321509cc",
            "route_table_id": "rtb-04a2cee479f223b7b",
            "subnet_id": "subnet-07eaa19eed019c24e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:298717586028:security-group/sg-0f3dfce9263874167",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f3dfce9263874167",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "content-marketing-swarm-alb-sg",
            "name_prefix": "",
            "owner_id": "298717586028",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "content-marketing-swarm-alb-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "content-marketing-swarm-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6cc3ed6217e0d53"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:298717586028:security-group/sg-026166733fcdb486b",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-026166733fcdb486b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f3dfce9263874167"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "content-marketing-swarm-ecs-tasks-sg",
            "name_prefix": "",
            "owner_id": "298717586028",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "content-marketing-swarm-ecs-tasks-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "content-marketing-swarm-ecs-tasks-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6cc3ed6217e0d53"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:298717586028:security-group/sg-04e4d97f4d714ae10",
            "description": "Security group for Lambda functions",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04e4d97f4d714ae10",
            "ingress": [],
            "name": "content-marketing-swarm-lambda-sg",
            "name_prefix": "",
            "owner_id": "298717586028",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "content-marketing-swarm-lambda-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "content-marketing-swarm-lambda-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6cc3ed6217e0d53"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:298717586028:security-group/sg-06a9bde4d3efe9e59",
            "description": "Security group for RDS PostgreSQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06a9bde4d3efe9e59",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from ECS tasks",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-026166733fcdb486b"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from Lambda",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04e4d97f4d714ae10"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "content-marketing-swarm-rds-sg",
            "name_prefix": "",
            "owner_id": "298717586028",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "content-marketing-swarm-rds-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "content-marketing-swarm-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6cc3ed6217e0d53"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.ecs_tasks",
            "module.vpc.aws_security_group.lambda",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:298717586028:security-group/sg-0ae98880c7e4ad093",
            "description": "Security group for VPC endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ae98880c7e4ad093",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "content-marketing-swarm-vpc-endpoints-sg",
            "name_prefix": "",
            "owner_id": "298717586028",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "content-marketing-swarm-vpc-endpoints-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "content-marketing-swarm-vpc-endpoints-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6cc3ed6217e0d53"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:298717586028:subnet/subnet-01f875ca071fa3a4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f875ca071fa3a4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "298717586028",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "content-marketing-swarm-private-subnet-1",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "content-marketing-swarm-private-subnet-1",
              "Type": "private"
            },
            "vpc_id": "vpc-0c6cc3ed6217e0d53"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:298717586028:subnet/subnet-0ea697e305a20d89c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea697e305a20d89c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "298717586028",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "content-marketing-swarm-private-subnet-2",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "content-marketing-swarm-private-subnet-2",
              "Type": "private"
            },
            "vpc_id": "vpc-0c6cc3ed6217e0d53"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:298717586028:subnet/subnet-0eeb71b4a9ba69d84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eeb71b4a9ba69d84",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "298717586028",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "content-marketing-swarm-public-subnet-1",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "content-marketing-swarm-public-subnet-1",
              "Type": "public"
            },
            "vpc_id": "vpc-0c6cc3ed6217e0d53"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:298717586028:subnet/subnet-07eaa19eed019c24e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07eaa19eed019c24e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "298717586028",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "content-marketing-swarm-public-subnet-2",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "content-marketing-swarm-public-subnet-2",
              "Type": "public"
            },
            "vpc_id": "vpc-0c6cc3ed6217e0d53"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:298717586028:vpc/vpc-0c6cc3ed6217e0d53",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e576fd2da35cde40",
            "default_route_table_id": "rtb-028fd7c384c2931e3",
            "default_security_group_id": "sg-0e101ca748d85efc0",
            "dhcp_options_id": "dopt-038076a56f37ccdc9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c6cc3ed6217e0d53",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-028fd7c384c2931e3",
            "owner_id": "298717586028",
            "tags": {
              "Environment": "dev",
              "Name": "content-marketing-swarm-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "content-marketing-swarm-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}